@@ -32,6 +32,13 @@
       </property>
       <item>
        <widget class="QLabel" name="labelSpeedTest">
+        <property name="toolTip">
+         <string>If enabled, when the ping test completes, an additional test
+will start that downloads multiple files in parallel in order
+to measure the download speed of your Internet access.
+
+Speed is measured in Kbps (Kilobits per second).</string>
+        </property>
         <property name="text">
          <string>Perform speed test</string>
         </property>
@@ -47,6 +54,13 @@
           <width>20</width>
           <height>16777215</height>
          </size>
+        </property>
+        <property name="toolTip">
+         <string>If enabled, when the ping test completes, an additional test
+will start that downloads multiple files in parallel in order
+to measure the download speed of your Internet access.
+
+Speed is measured in Kbps (Kilobits per second).</string>
         </property>
         <property name="text">
          <string/>
@@ -68,6 +82,13 @@
       </property>
       <item>
        <widget class="QLabel" name="labelPingsPerTarget">
+        <property name="toolTip">
+         <string>Select how many times QSpeedTest will &quot;ping&quot; each target host.
+
+Please note that, while a bigger value will provide more
+accurate results, it will also mean increased times for test
+completion.</string>
+        </property>
         <property name="text">
          <string>Pings per target</string>
         </property>
@@ -89,6 +110,13 @@
         </property>
         <property name="contextMenuPolicy">
          <enum>Qt::NoContextMenu</enum>
+        </property>
+        <property name="toolTip">
+         <string>Select how many times QSpeedTest will &quot;ping&quot; each target host.
+
+Please note that, while a bigger value will provide more
+accurate results, it will also mean increased times for test
+completion.</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
@@ -125,6 +153,13 @@
       </property>
       <item>
        <widget class="QLabel" name="labelParallelThreads">
+        <property name="toolTip">
+         <string>If 1, QSpeedTest will ping all the target hosts sequentially.
+
+If &gt;1, QSpeedTest will create and use multiple threads that
+work in parallel, each one pinging a different host from the
+target list.</string>
+        </property>
         <property name="text">
          <string>Parallel ping threads</string>
         </property>
@@ -135,6 +170,13 @@
       </item>
       <item>
        <widget class="QSpinBox" name="spinBoxParallelThreads">
+        <property name="toolTip">
+         <string>If 1, QSpeedTest will ping all the target hosts sequentially.
+
+If &gt;1, QSpeedTest will create and use multiple threads that
+work in parallel, each one pinging a different host from the
+target list.</string>
+        </property>
         <property name="minimum">
          <number>1</number>
         </property>
@@ -188,7 +230,7 @@
         <bool>true</bool>
        </property>
       </widget>
-      <widget class="QWidget" name="">
+      <widget class="QWidget" name="layoutWidget">
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
          <widget class="QLabel" name="labelTestResults">
@@ -237,6 +279,11 @@
         <property name="enabled">
          <bool>false</bool>
         </property>
+        <property name="toolTip">
+         <string>Copies to the system clipboard a report with the test results
+in vBulletin code format, ready to be posted on any vBulletin-
+based forum.</string>
+        </property>
         <property name="text">
          <string>vBulletin code</string>
         </property>
@@ -246,6 +293,11 @@
        <widget class="QPushButton" name="pushButtonCopyHTML">
         <property name="enabled">
          <bool>false</bool>
+        </property>
+        <property name="toolTip">
+         <string>Copies to the system clipboard a report with the test results
+in HTML format, which you can save as an .html file and use
+however and wherever you see fit.</string>
         </property>
         <property name="text">
          <string>HTML</string>
