@@ -1,7 +1,7 @@
 [TargetListInfo]
-Version=201005250104
+Version=201005261818
 NumberOfGroups=3
-Comment="by Someonefromhell, v0.41"
+Comment="by Someonefromhell, v0.42"
 ContactURL=http://www.adslgr.com/forum/member.php?u=1666
 
 [Group1]
@@ -214,7 +214,7 @@ NumberOfTargets=19
 14\Name=Clanhost Netherlands
 14\Address=83.96.144.74
 15\Name=RDSNET Romania
-15\Address=82.79.134.98
+15\Address=193.231.236.10
 16\Name=Dataplex Hungary
 16\Address=80.249.165.73
 17\Name=EA US
