@@ -1,3 +1,11 @@
+revision 14 - 20100529:                                             |
+    * Now correctly working under Mac OS X. Special thanks to:      |
+      1. Vag from madseeds.com for giving remote access to a Mac Pro|
+      2. greatst from insomnia.gr for additional testing!           |
+    * Added tooltips which explain some of the options or buttons   |
+    * Updated embedded target list                                  |
+
+
 revision 13 - 20100525:                                             |
     * Fixed a small compiling error under non-Windows OS            |
 
